tests/ui/zero_length_full.rs
use light_bitmap::{bucket_count, BitMap};

const BITMAP: BitMap<0, { bucket_count(0) }> = BitMap::const_full();

fn main() {}
